# ppx_staged

./: dune-project  ppx_staged.opam
src/: dune  include.ml  include.mli  ppx_staged.ml
src/expander/: clause_syntax.ml  dune  import.ml  ppx_generator_expander.ml  ppx_generator_expander.mli  ppx_staged_expander.ml  ppx_staged_expander.mli
src/lib/: bq_generator.ml  dune  generator_intf.ml  staged_generator.ml  staged_generator.mli  util.ml
src/lib/codegen/: splittable.ml
src/lib/randomness/: c_random_runtime.ml  c_sr_dropin_random.ml  c_sr_dropin_random.mli  random_intf.ml  random_stub.c
src/runtime/: dune  quickcheckable.ml
src/staging/: bq_generator.ml  bq_generator.mli  dune  generator_intf.ml  modules.ml  staged_generator.ml  staged_generator.mli
src/staging/codegen/: codecps.ml  codecps.mli
src/staging/randomness/: README.md  c_random.ml  c_random.mli  c_sr_dropin_random_runtime.ml  common.c  common.h  sr_random.ml  sr_random_stub.c
test/: dune  gen_dune_rules.ml
test/errors/: dune
test/passing/: dune
